# CMakeList.txt : CMake project for Red Alert 
cmake_minimum_required (VERSION 3.8)

project(redalert ASM CXX C)
enable_language(ASM)
set(CMAKE_CXX_FLAGS "")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../)
set(CMAKE_VERBOSE_MAKEFILE ON)

set(src_io
	./redalert/io/userinput.cpp
	./redalert/io/userinput.h
	./redalert/io/eventqueue.h
	./redalert/io/eventqueue.cpp
)

set(src_win32lib
	./redalert/win32lib/TOBUFF.cpp
	./redalert/win32lib/ALLOC.CPP
	./redalert/win32lib/AUDIO.H
	./redalert/win32lib/BUFFER.CPP
	./redalert/win32lib/BUFFER.H
	./redalert/win32lib/BUFFGLBL.CPP
	./redalert/win32lib/DEFINES.H
	./redalert/win32lib/DELAY.CPP
	./redalert/win32lib/DESCMGMT.H
	./redalert/win32lib/DIFFTB.INC
	./redalert/win32lib/DIPTHONG.CPP
	./redalert/win32lib/DIPTHONG.H
	./redalert/win32lib/DPLAY.H
	./redalert/win32lib/DRAWBUFF.H
	./redalert/win32lib/DRAWBUFF.INC
	./redalert/win32lib/DrawMisc.cpp
	./redalert/win32lib/DRAWRECT.CPP
	./redalert/win32lib/DSETUP.H
	./redalert/win32lib/DSOUND.H
	./redalert/win32lib/EXTERNS.H
	./redalert/win32lib/FASTFILE.H
	./redalert/win32lib/FILE.H
	./redalert/win32lib/FILEPCX.H
	./redalert/win32lib/FILETEMP.H
	./redalert/win32lib/FONT.H
	./redalert/win32lib/FUNCTION.H
	./redalert/win32lib/GBUFFER.CPP
	./redalert/win32lib/GBUFFER.H
	./redalert/win32lib/GBUFFER.INC
	./redalert/win32lib/GETSHAPE.CPP
	./redalert/win32lib/ICONCACH.H
	./redalert/win32lib/ICONSET.CPP
	./redalert/win32lib/IFF.CPP
	./redalert/win32lib/IFF.H
	./redalert/win32lib/INDEXTB.INC
	./redalert/win32lib/IRANDOM.CPP
	./redalert/win32lib/KEYBOARD.H
	./redalert/win32lib/KEYBOARD.INC
	./redalert/win32lib/KEYSTRUC.INC
	./redalert/win32lib/LOAD.CPP
	./redalert/win32lib/LOADFONT.CPP
	./redalert/win32lib/MCGAPRIM.INC
	./redalert/win32lib/MEMFLAG.H
	./redalert/win32lib/MISC.H
	./redalert/win32lib/MODEMREG.H
	./redalert/win32lib/MONO.H
	./redalert/win32lib/MOUSE.H
	./redalert/win32lib/MOUSE.INC
	./redalert/win32lib/MouseShape.cpp
	./redalert/win32lib/MouseShape.h
	./redalert/win32lib/MOUSEWW.CPP
	./redalert/win32lib/NYBBTB.INC
	./redalert/win32lib/PALETTE.CPP
	./redalert/win32lib/PALETTE.H
	./redalert/win32lib/PLAYCD.H
	./redalert/win32lib/PROFILE.H
	./redalert/win32lib/PROFILE.INC
	./redalert/win32lib/RAWFILE.H
	./redalert/win32lib/SHAPE.H
	./redalert/win32lib/SHAPE.INC
	./redalert/win32lib/SOS.H
	./redalert/win32lib/SOSCOMP.H
	./redalert/win32lib/SOSDATA.H
	./redalert/win32lib/SOSDEFS.H
	./redalert/win32lib/SOSFNCT.H
	./redalert/win32lib/SOSRES.H
	./redalert/win32lib/SOUND.H
	./redalert/win32lib/SOUNDINT.H
	./redalert/win32lib/STAMP.INC
	./redalert/win32lib/STRUCTS.H
	./redalert/win32lib/SVGAPRIM.INC
	./redalert/win32lib/TILE.H
	./redalert/win32lib/TIMER.CPP
	./redalert/win32lib/TIMER.H
	./redalert/win32lib/TIMERDWN.CPP
	./redalert/win32lib/TIMERINI.CPP
	./redalert/win32lib/VIDEO.H
	./redalert/win32lib/WINCOMM.H
	./redalert/win32lib/WINDOWS.CPP
	./redalert/win32lib/WINHIDE.CPP
	./redalert/win32lib/WRITEPCX.CPP
	./redalert/win32lib/WSA.CPP
	./redalert/win32lib/WSA.H
	./redalert/win32lib/WWFILE.H
	./redalert/win32lib/WWLIB32.H
	./redalert/win32lib/WWMEM.H
	./redalert/win32lib/WWMEM.INC
	./redalert/win32lib/wwstd.h
	./redalert/win32lib/WW_WIN.H
	./redalert/win32lib/_DIPTABL.CPP	
)

#Red Alert files
set(src_redalert
	./redalert/2KEYFRAM.CPP
	./redalert/AADATA.CPP
	./redalert/ABSTRACT.CPP
	./redalert/ABSTRACT.H
	./redalert/ADATA.CPP
	./redalert/ADPCM.CPP
	./redalert/AIRCRAFT.CPP
	./redalert/AIRCRAFT.H
	./redalert/ANIM.CPP
	./redalert/CONSOLE.CPP
	./redalert/ANIM.H
	./redalert/AUDIO.CPP
	./redalert/AUDIO.H
	./redalert/AUDIOMIX.H
	./redalert/AUDMIX.CPP
	./redalert/B64PIPE.CPP
	./redalert/B64PIPE.H
	./redalert/B64STRAW.CPP
	./redalert/B64STRAW.H
	./redalert/BAR.CPP
	./redalert/BAR.H
	./redalert/BASE.CPP
	./redalert/BASE.H
	./redalert/BASE64.CPP
	./redalert/BASE64.H
	./redalert/BBDATA.CPP
	./redalert/BDATAXML.CPP
	./redalert/BDATA.CPP
	./redalert/BENCH.CPP
	./redalert/BENCH.H
	./redalert/BFIOFILE.CPP
	./redalert/BFIOFILE.H
	./redalert/BIGCHECK.CPP
	./redalert/BIGCHECK.H
	./redalert/BLOWFISH.CPP
	./redalert/BLOWFISH.H
	./redalert/BLOWPIPE.CPP
	./redalert/BLOWPIPE.H
	./redalert/BLWSTRAW.CPP
	./redalert/BLWSTRAW.H
	./redalert/BUFF.CPP
	./redalert/BUFF.H
	./redalert/BUFFERX.H
	./redalert/BUILDING.CPP
	./redalert/BUILDING.H
	./redalert/BULLET.CPP
	./redalert/BULLET.H
	./redalert/CARGO.CPP
	./redalert/CARGO.H
	./redalert/CARRY.CPP
	./redalert/CARRY.H
	./redalert/CBN_.H
	./redalert/CCDDE.CPP
	./redalert/CCDDE.H
	./redalert/CCFILE.CPP
	./redalert/CCFILE.H
	./redalert/CCINI.CPP
	./redalert/CCINI.H
	./redalert/CCMPATH.CPP
	./redalert/CCPTR.CPP
	./redalert/CCPTR.H
	./redalert/CCTEN.CPP
	./redalert/CDATA.CPP
	./redalert/CDFILE.CPP
	./redalert/CDFILE.H
	./redalert/CELL.CPP
	./redalert/CELL.H
	./redalert/CHECKBOX.CPP
	./redalert/CHECKBOX.H
	./redalert/CHEKLIST.CPP
	./redalert/CHEKLIST.H
	./redalert/CLASS.CPP
	./redalert/COLRLIST.CPP
	./redalert/COLRLIST.H
	./redalert/COMBAT.CPP
	./redalert/COMBUF.CPP
	./redalert/COMBUF.H
	./redalert/COMINIT.CPP
	./redalert/COMINIT.H
	./redalert/COMPAT.H
	./redalert/COMQUEUE.CPP
	./redalert/COMQUEUE.H
	./redalert/CONFDLG.CPP
	./redalert/CONFDLG.H
	./redalert/CONNECT.CPP
	./redalert/CONNECT.H
	./redalert/CONNMGR.H
	./redalert/CONQUER.CPP
	./redalert/CONQUER.H
	./redalert/CONST.CPP
	./redalert/CONTROL.CPP
	./redalert/CONTROL.H
	./redalert/COORD.CPP	
	./redalert/COORDA.h
	./redalert/CRATE.CPP
	./redalert/CRATE.H
	./redalert/CRC.CPP
	./redalert/CRC.H
	./redalert/CRCPIPE.CPP
	./redalert/CRCPIPE.H
	./redalert/CRCSTRAW.CPP
	./redalert/CRCSTRAW.H
	./redalert/CREDITS.CPP
	./redalert/CREDITS.H
	./redalert/CREW.CPP
	./redalert/CREW.H
	./redalert/CSTRAW.CPP
	./redalert/CSTRAW.H
	./redalert/DDE.CPP
	./redalert/DDE.H
	./redalert/DEBUG.CPP
	./redalert/DEBUG.H
	./redalert/DEFINES.H
	./redalert/DESCDLG.CPP
	./redalert/DESCDLG.H
	./redalert/DIAL8.CPP
	./redalert/DIAL8.H
	./redalert/DIALOG.CPP
	./redalert/DIBAPI.H
	./redalert/DIBFILE.CPP
	./redalert/DIBUTIL.CPP
	./redalert/DIBUTIL.H
	./redalert/DISPLAY.CPP
	./redalert/DISPLAY.H
	./redalert/DLLInterface.cpp
	./redalert/DLLInterface.h
	./redalert/DLLInterfaceEditor.cpp
	./redalert/DOOR.CPP
	./redalert/DOOR.H
	./redalert/DPMI.CPP
	./redalert/DPMI.H
	./redalert/DRIVE.CPP
	./redalert/DRIVE.H
	./redalert/DROP.CPP
	./redalert/DROP.H
	./redalert/DTABLE.CPP
	./redalert/DYNAVEC.CPP
	./redalert/EDIT.CPP
	./redalert/EDIT.H
	./redalert/EGOS.CPP
	./redalert/EGOS.H
	./redalert/ENDING.CPP
	./redalert/ENDING.H
	./redalert/EVENT.CPP
	./redalert/EVENT.H
	./redalert/EXPAND.CPP
	./redalert/EXTERNS.H
	./redalert/FACE.CPP
	./redalert/FACE.H
	./redalert/FACING.CPP
	./redalert/FACING.H
	./redalert/FACTORY.CPP
	./redalert/FACTORY.H
	./redalert/FAKESOCK.H
	./redalert/FIELD.CPP
	./redalert/FIELD.H
	./redalert/FILEPCX.H
	./redalert/FINDPATH.CPP
	./redalert/FIXED.CPP
	./redalert/FIXED.H
	./redalert/FLASHER.CPP
	./redalert/FLASHER.H
	./redalert/FLY.CPP
	./redalert/FLY.H
	./redalert/FOOT.CPP
	./redalert/FOOT.H
	./redalert/FTIMER.H
	./redalert/FUNCTION.H
	./redalert/FUSE.CPP
	./redalert/FUSE.H
	./redalert/GADGET.CPP
	./redalert/GADGET.H
	./redalert/GAMEDLG.CPP
	./redalert/GAMEDLG.H
	./redalert/GAUGE.CPP
	./redalert/GAUGE.H
	./redalert/GETCPU.CPP
	./redalert/GLOBALS.CPP
	./redalert/GOPTIONS.CPP
	./redalert/GOPTIONS.H
	./redalert/GSCREEN.CPP
	./redalert/GSCREEN.H
	./redalert/HDATA.CPP
	./redalert/HEAP.CPP
	./redalert/HEAP.H
	./redalert/HELP.CPP
	./redalert/HELP.H
	./redalert/HOUSE.CPP
	./redalert/HOUSE.H
	./redalert/HSV.CPP
	./redalert/HSV.H
	./redalert/ICONLIST.CPP
	./redalert/ICONLIST.H
	./redalert/IDATA.CPP
	./redalert/INFANTRY.CPP
	./redalert/INFANTRY.H
	./redalert/INI.CPP
	./redalert/INI.H
	./redalert/INIBIN.CPP
	./redalert/INICODE.CPP
	./redalert/INIT.CPP
	./redalert/INLINE.H
	./redalert/INT.CPP
	./redalert/INT.H
	./redalert/INTERNET.CPP
	./redalert/INTERNET.H
	./redalert/INTERPAL.CPP
	./redalert/INTRO.CPP
	./redalert/INTRO.H
	./redalert/IOMAP.CPP
	./redalert/IOOBJ.CPP
	./redalert/IPX.CPP
	./redalert/IPX.H
	./redalert/IPX95.CPP
	./redalert/IPX95.H
	./redalert/IPXADDR.CPP
	./redalert/IPXADDR.H
	./redalert/IPXCONN.CPP
	./redalert/IPXCONN.H
	./redalert/IPXGCONN.CPP
	./redalert/IPXGCONN.H
	./redalert/IPXMGR.CPP
	./redalert/IPXMGR.H
	./redalert/ITABLE.CPP
	./redalert/JSHELL.CPP
	./redalert/JSHELL.H
	./redalert/KEY.CPP
	./redalert/KEY.H
	./redalert/KEYBOARD.H
	./redalert/LANGUAGE.H
	./redalert/LAYER.CPP
	./redalert/LAYER.H
	./redalert/LCW.CPP
	./redalert/LCW.H
	./redalert/LCWPIPE.CPP
	./redalert/LCWPIPE.H
	./redalert/LCWSTRAW.CPP
	./redalert/LCWSTRAW.H
	./redalert/LCWUNCMP.CPP
	./redalert/LED.H
	./redalert/License.txt
	./redalert/LINK.CPP
	./redalert/LINK.H
	./redalert/LINT.H
	./redalert/LIST.CPP
	./redalert/LIST.H
	./redalert/LISTNODE.H
	./redalert/LOADDLG.CPP
	./redalert/LOADDLG.H
	./redalert/LOGIC.CPP
	./redalert/LOGIC.H
	./redalert/LZO.H
	./redalert/LZO1X.H
	./redalert/LZO1X_C.CPP
	./redalert/LZO1X_D.CPP
	./redalert/LZOCONF.H
	./redalert/LZOPIPE.CPP
	./redalert/LZOPIPE.H
	./redalert/LZOSTRAW.CPP
	./redalert/LZOSTRAW.H
	./redalert/LZO_CONF.H
	./redalert/LZW.CPP
	./redalert/LZW.H
	./redalert/LZWPIPE.CPP
	./redalert/LZWPIPE.H
	./redalert/LZWSTRAW.CPP
	./redalert/LZWSTRAW.H
	./redalert/MAP.CPP
	./redalert/MAP.H
	./redalert/MAPEDDLG.CPP
	./redalert/MAPEDIT.CPP
	./redalert/MAPEDIT.H
	./redalert/MAPEDPLC.CPP
	./redalert/MAPEDTM.CPP
	./redalert/MAPSEL.CPP
	./redalert/MCI.CPP
	./redalert/MCI.H
	./redalert/MCIMOVIE.CPP
	./redalert/MCIMOVIE.H
	./redalert/MEMCHECK.H
	./redalert/MENUS.CPP
	./redalert/MESSAGE.H
	./redalert/MiscAsm.cpp
	./redalert/MISSION.CPP
	./redalert/MISSION.H
	./redalert/MIXFILE.CPP
	./redalert/MIXFILE.H
	./redalert/MONOC.CPP
	./redalert/MONOC.H
	./redalert/MOUSE.CPP
	./redalert/MOUSE.H
	./redalert/MOVIE.H
	./redalert/MP.CPP
	./redalert/MP.H
	./redalert/MPGSET.CPP
	./redalert/MPGSET.H
	./redalert/MPLAYER.CPP
	./redalert/MPMGRW.CPP
	./redalert/MPMGRW.H
	./redalert/MPU.CPP
	./redalert/MPU.H
	./redalert/MSGBOX.CPP
	./redalert/MSGBOX.H
	./redalert/MSGLIST.CPP
	./redalert/MSGLIST.H
	./redalert/NETDLG.CPP
	./redalert/NULLCONN.CPP
	./redalert/NULLCONN.H
	./redalert/NULLDLG.CPP
	./redalert/NULLMGR.CPP
	./redalert/NULLMGR.H
	./redalert/OBJECT.CPP
	./redalert/OBJECT.H
	./redalert/OCIDL.H
	./redalert/ODATA.CPP
	./redalert/OPTIONS.CPP
	./redalert/OPTIONS.H
	./redalert/OVERLAY.CPP
	./redalert/OVERLAY.H
	./redalert/UNITXML.CPP
	./redalert/PACKET.CPP
	./redalert/PACKET.H
	./redalert/PALETTEC.CPP
	./redalert/PALETTEC.H
	./redalert/PIPE.CPP
	./redalert/PIPE.H
	./redalert/PK.CPP
	./redalert/PK.H
	./redalert/PKPIPE.CPP
	./redalert/PKPIPE.H
	./redalert/PKSTRAW.CPP
	./redalert/PKSTRAW.H
	./redalert/POWER.CPP
	./redalert/POWER.H
	./redalert/PROFILE.CPP
	./redalert/QUEUE.CPP
	./redalert/QUEUE.H
	./redalert/RADAR.CPP
	./redalert/RADAR.H
	./redalert/RADIO.CPP
	./redalert/RADIO.H
	./redalert/RAMFILE.CPP
	./redalert/RAMFILE.H
	./redalert/RAND.CPP
	./redalert/RANDOM.CPP
	./redalert/RANDOM.H
	./redalert/RAWFILE.CPP
	./redalert/RAWFILE.H
	./redalert/RAWOLAPI.CPP
	./redalert/RAWOLAPI.H
	./redalert/READLINE.CPP
	./redalert/READLINE.H
	./redalert/RECT.CPP
	./redalert/RECT.H
	./redalert/REGION.H
	./redalert/REINF.CPP
	./redalert/RGB.CPP
	./redalert/RGB.H
	./redalert/RNDSTRAW.CPP
	./redalert/RNDSTRAW.H
	./redalert/RNG.H
	./redalert/ROTBMP.CPP
	./redalert/ROTBMP.H
	./redalert/RULES.CPP
	./redalert/RULES.H
	./redalert/SAVEDLG.H
	./redalert/SAVELOAD.CPP
	./redalert/SCENARIO.CPP
	./redalert/SCENARIO.H
	./redalert/SCORE.CPP
	./redalert/SCORE.H
	./redalert/SCREEN.H
	./redalert/SCROLL.CPP
	./redalert/SCROLL.H
	./redalert/SDATA.CPP
	./redalert/SEARCH.H
	./redalert/SEDITDLG.CPP
	./redalert/SEDITDLG.H
	./redalert/SENDFILE.CPP
	./redalert/SEQCONN.CPP
	./redalert/SEQCONN.H
	./redalert/SESSION.CPP
	./redalert/SESSION.H
	./redalert/SHA.CPP
	./redalert/SHA.H
	./redalert/Shape.cpp
	./redalert/SHAPEBTN.CPP
	./redalert/SHAPEBTN.H
	./redalert/SHAPIPE.CPP
	./redalert/SHAPIPE.H
	./redalert/SHASTRAW.CPP
	./redalert/SHASTRAW.H
	./redalert/SIDEBAR.CPP
	./redalert/SIDEBAR.H
	./redalert/SIDEBARGlyphx.CPP
	./redalert/SIDEBARGlyphx.H
	./redalert/SLIDER.CPP
	./redalert/SLIDER.H
	./redalert/SMUDGE.CPP
	./redalert/SMUDGE.H
	./redalert/SOUNDDLG.CPP
	./redalert/SOUNDDLG.H
	./redalert/SPECIAL.CPP
	./redalert/SPECIAL.H
	./redalert/NewBlit.cpp
	./redalert/SPRITE.CPP
	./redalert/STAGE.H
	./redalert/STARTUP.CPP
	./redalert/STATBTN.CPP
	./redalert/STATBTN.H
	./redalert/STATS.CPP
	./redalert/STRAW.CPP
	./redalert/STRAW.H
	./redalert/STUB.CPP
	./redalert/STYLE.H
	./redalert/SUPER.CPP
	./redalert/SUPER.H
	./redalert/SURFACE.CPP
	./redalert/SURFACE.H
	./redalert/TAB.CPP
	./redalert/TAB.H
	./redalert/TACTION.CPP
	./redalert/TACTION.H
	./redalert/TARGET.CPP
	./redalert/TARGET.H
	./redalert/TCPIP.CPP
	./redalert/TCPIP.H
	./redalert/TDATA.CPP
	./redalert/TEAM.CPP
	./redalert/TEAM.H
	./redalert/TEAMTYPE.CPP
	./redalert/TEAMTYPE.H
	./redalert/TECHNO.CPP
	./redalert/TECHNO.H
	./redalert/TEMPLATE.CPP
	./redalert/TEMPLATE.H
	./redalert/TENMGR.CPP
	./redalert/TENMGR.H
	./redalert/TERRAIN.CPP
	./redalert/TERRAIN.H
	./redalert/TEVENT.CPP
	./redalert/TEVENT.H
	./redalert/TEXTBTN.CPP
	./redalert/TEXTBTN.H
	./redalert/THEME.CPP
	./redalert/THEME.H
	./redalert/TILESET.CPP
	./redalert/TOGGLE.CPP
	./redalert/TOGGLE.H
	./redalert/TOOLTIP.CPP
	./redalert/TOOLTIP.H
	./redalert/TRACKER.CPP
	./redalert/TRIGGER.CPP
	./redalert/TRIGGER.H
	./redalert/TRIGTYPE.CPP
	./redalert/TRIGTYPE.H
	./redalert/TXTLABEL.CPP
	./redalert/TXTLABEL.H
	./redalert/TYPE.H
	./redalert/UDATA.CPP
	./redalert/UDPADDR.CPP
	./redalert/UNIT.CPP
	./redalert/UNIT.H
	./redalert/UTRACKER.CPP
	./redalert/UTRACKER.H
	./redalert/VDATA.CPP
	./redalert/VECTOR.CPP
	./redalert/VECTOR.H
	./redalert/VERSION.CPP
	./redalert/VERSION.H
	./redalert/VESSEL.CPP
	./redalert/VESSEL.H
	./redalert/VISUDLG.CPP
	./redalert/VISUDLG.H
	./redalert/VORTEX.CPP
	./redalert/VORTEX.H
	./redalert/VQAMOVIE.CPP
	./redalert/VQAMOVIE.H
	./redalert/W95TRACE.CPP
	./redalert/W95TRACE.H
	./redalert/WARHEAD.CPP
	./redalert/WARHEAD.H
	./redalert/WATCOM.H
	./redalert/WEAPON.CPP
	./redalert/WEAPON.H
	./redalert/WINSTUB.CPP
	./redalert/WOLAPIOB.CPP
	./redalert/WOLAPIOB.H
	./redalert/WOLDEBUG.H
	./redalert/WOLEDIT.CPP
	./redalert/WOLEDIT.H
	./redalert/WOLSTRNG.CPP
	./redalert/WOLSTRNG.H
	./redalert/WOL_CGAM.CPP
	./redalert/WOL_CHAT.CPP
	./redalert/WOL_DNLD.CPP
	./redalert/WOL_GSUP.CPP
	./redalert/WOL_GSUP.H
	./redalert/WOL_LOGN.CPP
	./redalert/WOL_MAIN.CPP
	./redalert/WOL_OPT.CPP
	./redalert/WSNWLINK.H
	./redalert/WSPIPX.CPP
	./redalert/WSPIPX.H
	./redalert/WSPROTO.CPP
	./redalert/WSPROTO.H
	./redalert/WSPUDP.CPP
	./redalert/WSPUDP.H
	./redalert/WWALLOC.H
	./redalert/WWFILE.H
	./redalert/XPIPE.CPP
	./redalert/XPIPE.H
	./redalert/XSTRAW.CPP
	./redalert/XSTRAW.H
	./redalert/_WSPROTO.CPP
	./redalert/_WSPROTO.H
	./redalert/MapScript.cpp
	./redalert/TXTPRNT.cpp
	./redalert/TILESETXML.cpp
)

set(src_external
	#glew
	./external/gl/glew.c

	#libsmacker
	./external/libsmacker/smacker.c
	./external/libsmacker/smacker.h
	./external/libsmacker/smk_bitstream.c
	./external/libsmacker/smk_bitstream.h
	./external/libsmacker/smk_hufftree.c
	./external/libsmacker/smk_hufftree.h
	./external/libsmacker/smk_malloc.h
	
	#imgui
	./external/imgui/imconfig.h
	./external/imgui/imgui.cpp
	./external/imgui/imgui.h
	./external/imgui/imgui_draw.cpp
	./external/imgui/imgui_widgets.cpp
	./external/imgui/examples/imgui_impl_opengl3.cpp
	./external/imgui/examples/imgui_impl_opengl3.h
	./external/imgui/examples/imgui_impl_sdl.cpp
	./external/imgui/examples/imgui_impl_sdl.h

	#lua
	./external/lua/lapi.c
	./external/lua/lapi.h
	./external/lua/lauxlib.c
	./external/lua/lauxlib.h
	./external/lua/lbaselib.c
	./external/lua/lbitlib.c
	./external/lua/lcode.c
	./external/lua/lcode.h
	./external/lua/lcorolib.c
	./external/lua/lctype.c
	./external/lua/lctype.h
	./external/lua/ldblib.c
	./external/lua/ldebug.c
	./external/lua/ldebug.h
	./external/lua/ldo.c
	./external/lua/ldo.h
	./external/lua/ldump.c
	./external/lua/lfunc.c
	./external/lua/lfunc.h
	./external/lua/lgc.c
	./external/lua/lgc.h
	./external/lua/linit.c
	./external/lua/liolib.c
	./external/lua/llex.c
	./external/lua/llex.h
	./external/lua/llimits.h
	./external/lua/lmathlib.c
	./external/lua/lmem.c
	./external/lua/lmem.h
	./external/lua/loadlib.c
	./external/lua/lobject.c
	./external/lua/lobject.h
	./external/lua/lopcodes.c
	./external/lua/lopcodes.h
	./external/lua/loslib.c
	./external/lua/lparser.c
	./external/lua/lparser.h
	./external/lua/lprefix.h
	./external/lua/lstate.c
	./external/lua/lstate.h
	./external/lua/lstring.c
	./external/lua/lstring.h
	./external/lua/lstrlib.c
	./external/lua/ltable.c
	./external/lua/ltable.h
	./external/lua/ltablib.c
	./external/lua/ltm.c
	./external/lua/ltm.h
	./external/lua/lua.h
	./external/lua/lua.hpp
	./external/lua/luaconf.h
	./external/lua/lualib.h
	./external/lua/lundump.c
	./external/lua/lundump.h
	./external/lua/lutf8lib.c
	./external/lua/lvm.c
	./external/lua/lvm.h
	./external/lua/lzio.c
	./external/lua/lzio.h
	./external/xml/tinyxml2.cpp
	./external/xml/tinyxml2.h
)
 

add_definitions(-D RA_AF -DCHEAT_KEYS -DIMGUI_IMPL_OPENGL_LOADER_GLEW -DSCENARIO_EDITOR -DWINDOWS_IGNORE_PACKING_MISMATCH -DTRUE_FALSE_DEFINED -DWIN32 -DWINDOWS -DENGLISH -D_USRDLL -Dredalert_EXPORTS)
add_compile_options(/permissive+  /Zc:forScope- /Zp1)
add_executable( redalert ${src_io} ${src_win32lib} ${src_redalert} ${src_external})

set_target_properties(redalert PROPERTIES OUTPUT_NAME "redalert" LINK_FLAGS "/PDB:\"redalert.pdb\" /SUBSYSTEM:WINDOWS" RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../" )
target_include_directories(redalert PRIVATE ./external/xml/;./external/devil/;./external/;./redalert/win32lib;./external/lua/;./external/imgui;./external/dxsdk/Include;./external/ffmpeg-win32/include;./external/sdl2/include;./win32lib;./external/openal/include)
target_link_libraries(redalert "opengl32.lib" "winmm.lib" "Ws2_32.lib" "${CMAKE_SOURCE_DIR}/external/devil/ilu.lib" "${CMAKE_SOURCE_DIR}/external/devil/DevIL.lib" "${CMAKE_SOURCE_DIR}/external/sdl2/lib/x86/SDL2.lib" "${CMAKE_SOURCE_DIR}/external/openal/out/build/x86-Release/OpenAL32.lib")
